--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typescript-guid": "^1.0.3",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
